[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0.282353, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 1, 0.6, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.858824, 1, 1 )

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.560784 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 5, 5 ), Vector2( 8, 8 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}

[node name="Control_UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer_Stats" type="HBoxContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 275.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer_Stats"]
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 0 )

[node name="ProgressBar_health" type="ProgressBar" parent="HBoxContainer_Stats/VBoxContainer"]
margin_right = 250.0
margin_bottom = 14.0
custom_styles/fg = SubResource( 1 )
value = 100.0

[node name="ProgressBar_stamina" type="ProgressBar" parent="HBoxContainer_Stats/VBoxContainer"]
margin_top = 18.0
margin_right = 250.0
margin_bottom = 32.0
custom_styles/fg = SubResource( 2 )
value = 100.0

[node name="ProgressBar_magicka" type="ProgressBar" parent="HBoxContainer_Stats/VBoxContainer"]
margin_top = 36.0
margin_right = 250.0
margin_bottom = 50.0
custom_styles/fg = SubResource( 3 )
value = 100.0

[node name="PanelContainer_Gestures" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -200.0
margin_right = 282.0
margin_bottom = -28.9999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer_Gestures"]
margin_left = 7.0
margin_top = 7.0
margin_right = 555.0
margin_bottom = 164.0
alignment = 1

[node name="Label" type="Label" parent="PanelContainer_Gestures/VBoxContainer"]
margin_right = 548.0
margin_bottom = 14.0
text = "Gestures"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer_Gestures/VBoxContainer"]
margin_top = 18.0
margin_right = 548.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Button_0" type="Button" parent="PanelContainer_Gestures/VBoxContainer/HBoxContainer"]
margin_left = 163.0
margin_right = 247.0
margin_bottom = 139.0
text = "Weapon up"

[node name="Button_1" type="Button" parent="PanelContainer_Gestures/VBoxContainer/HBoxContainer"]
margin_left = 251.0
margin_right = 384.0
margin_bottom = 139.0
text = "Legend Never Dies"

[node name="Label_Backstab" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.136
margin_top = 174.634
margin_right = -52.1357
margin_bottom = 188.634
rect_scale = Vector2( 3, 3 )
text = "Hit [R2] to backstab"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DEATH" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DEATH"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -7.0
margin_right = 32.0
margin_bottom = 7.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 32, 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "YOU DIED"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="DEATH"]
anims/default = SubResource( 4 )
